<?php
namespace Yacare\TramitesBundle\Entity;

interface IEstadoRequisito {

}