<?php
namespace Yacare\TramitesBundle\Entity;

interface ITramite {

}