@startuml
namespace Yacare.TramitesBundle.Entity  {
	class ComprobanteTipo << class >> {
		-Codigo
		-Clase
		-PeriodoValidez
		#InstrumentoEspejo
	}
	class Requisito << class >> {
		-MeRequieren
		-Requiere
		-Tipo
		-Lugar
		-Url
		#TramiteTipoEspejo
	}
	interface IEstadoRequisito << interface >> {
	}
	interface IRequisito << interface >> {
	}
	class TramiteTipo << class >> {
		-Clase
		#ComprobanteTipo
		#Formulario
		#RequisitoEspejo
		-AsociacionRequisitos
	}
	class EstadoRequisito << class >> {
		#Tramite
		#AsociacionRequisito
		#EstadoRequisitoPadre
		#Estado
		#FechaAprobado
		--
		+EsNecesario()
		+EsOpcional()
		+EstaCumplido()
		+CondicionSeCumple()
	}
	class AsociacionRequisito << class >> {
		#TramiteTipo
		-Propiedad
		#Requisito
		-Instancia
		-Opcional
		-CondicionQue
		-CondicionEs
		-CondicionCuanto
	}
	abstract Tramite << abstract >> {
		-Estado
		#TramiteTipo
		-EstadosRequisitos
		-FechaTerminado
		#Comprobante
		#Titular
		--
		+EstaEnCurso()
		+PorcentajeCompleto()
		+EstaListoParaTerminar()
		+EstaTerminado()
		+RequisitosObligatoriosCantidad()
		+RequisitosFaltantesCantidad()
		+ExplicarEstadosRequisitos()
		+AgregarEstadoRequisito()
	}
	interface ITramite << interface >> {
	}
	interface IComprobante << interface >> {
	}
	abstract Comprobante << abstract >> {
		#ComprobanteTipo
		#TramiteOrigen
		-NumeroPrefijo
		-Numero
		#Titular
	}
	class ConApoderado << (T,#FF7700) trait >> {
		#Apoderado
	}
	class ConTitular << (T,#FF7700) trait >> {
		#Titular
	}
	
	Requisito <|-- IRequisito  : implementa
	
	Comprobante <|-- IComprobante  : implementa
	Comprobante o-- ConTitular  : implementa
	Comprobante o-- ComprobanteTipo  : contiene
	Comprobante o-- Tramite  : contiene
	
	Tramite <|-- ITramite  : implementa
	Tramite <|-- ConApoderado  : implementa
	Tramite <|-- ConTitular  : implementa
	Tramite o-- TramiteTipo  : contiene
	
	EstadoRequisito <|-- IEstadoRequisito  : implementa
	EstadoRequisito o-- AsociacionRequisito : contiene
	EstadoRequisito o-- Tramite : contiene
	EstadoRequisito o-- Requisito : contiene
	
	AsociacionRequisito o-- Tramite : contiene
	AsociacionRequisito o-- Requisito : contiene
	
	ConTitular o-- Yacare.BaseBundle.Entity.Persona : contiene
	ConApoderado o-- Yacare.BaseBundle.Entity.Persona : contiene
}
@enduml

